.pageTitle Alignment Fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -100,3 +100,6 @@ body {
   color: #1376bc;
 }
 
+.pageTitle {
+  margin-top: 2rem
+}
